Layout: fix z-indexes

--- a/packages/ui/src/styles/components/layout.sass
+++ b/packages/ui/src/styles/components/layout.sass
@@ -8,7 +8,7 @@
 
 	width: 100%
 	height: 100%
-	min-height: 50vh
+	min-height: 100vh
 
 	&-topBar
 		width: 100%
@@ -107,6 +107,8 @@
 			transform: rotate(180deg)
 
 	&-main
+		position: relative
+		z-index: 1
 		width: 80%
 		flex-grow: 1
 		background: $cui-layout-background
